--- a/style.css
+++ b/style.css
@@ -3,26 +3,29 @@
     padding:0;
 
 }
+
 h1{
   
     text-align: center;
     margin-bottom: 50px;
     margin-top: 50px;
 }
+
 .btns{
+    
     text-align: center;
-    margin-top: 50px;
+    padding-top: 50px;
 }
 button{
     width:150px;
-    padding:5px;
+    padding:10px 5px;
     background-color: #555;
     color:white;
     border-radius: 30px;
-    background-color: red;
+    background-color:#a71d14;
     border: none;
     cursor:pointer;
-
+    font-size:16px;
 }
 .container{
     display: flex;
@@ -47,7 +50,7 @@ button{
     column-gap: 10px;
     box-shadow: -5px 5px gray;
     cursor: pointer;
-    overflow-y:scroll;    
+    overflow:hidden;    
 }
 .description{
 display: flex;
@@ -60,4 +63,38 @@ margin:50px 0;
 img{
    
     object-fit: cover;
+}
+.modal{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    row-gap: 50px;
+    width:100vw;
+    height: 100vh;
+    position:fixed;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5rem;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding-top: 30px;
+   color:white;
+   
+}
+.modal>.cardfilm{
+    height: 70%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items:center ;
+    opacity:1;
+    border:none;
+    box-shadow: none;
+    
+}
+.modal>.cardfilm>img{
+    width: 30%;
+    
+}
+.modal>.cardfilm>.description>h2{
+    margin-bottom: 20px;
 }
