--- a/style.css
+++ b/style.css
@@ -3,12 +3,17 @@
     padding:0;
 
 }
-
+body{
+    background-color: rgb(211, 211, 211,0.5);
+}
 h1{
-  
+    color: white;
+    background-color:rgba(167, 29, 20,0.9);
     text-align: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    margin: 50px auto;
+    width: 30%;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .btns{
@@ -19,13 +24,17 @@ h1{
 button{
     width:150px;
     padding:10px 5px;
-    background-color: #555;
     color:white;
     border-radius: 30px;
     background-color:#a71d14;
     border: none;
     cursor:pointer;
     font-size:16px;
+}
+.fixed{
+    position:sticky;
+    top:0;
+    
 }
 .container{
     display: flex;
@@ -47,9 +56,12 @@ button{
     height:20vw;
     justify-content:space-between ;
     column-gap: 10px;
-    box-shadow: -5px 5px gray;
+    box-shadow: -5px 5px rgba(128, 128, 128,0.2);
     cursor: pointer;
-    overflow:hidden;    
+    overflow:hidden;
+    background-color:gray; 
+    color:white; 
+    border-radius: 5px;  
 }
 .description{
 display: flex;
@@ -64,10 +76,11 @@ img{
     object-fit: cover;
 }
 .modal{
+   
     display:flex;
-    flex-direction: column;
+   /* flex-direction: column;*/
     justify-content:center;
-    align-items: center;
+    align-items:center;
     row-gap: 50px;
     width:100vw;
     height: 100vh;
@@ -75,24 +88,35 @@ img{
     text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     padding-top: 30px;
    color:white;
-   opacity:0;
-   z-index: -1;
+  /* opacity:0;*/
+  display: none;
+   z-index: -1;  
+   cursor:pointer;
+   text-align: center;
+}
+.close{
    
-  
-   
+    position: absolute;
+    color:red;
+    font-size: 16px;
+    top: 10px;
+    right:25px;
+    cursor:pointer;
 }
 .modal>.cardfilm{
-    height: 70%;
+    height: 90%;
     flex-direction: column;
     justify-content: space-evenly;
     align-items:center ;
     opacity:1;
     border:none;
     box-shadow: none;
-    
+    margin-left: 50%;
+    margin-top: 30px;
+    transform: translateX(-50%);
 }
 .modal>.cardfilm>img{
     width: 30%;
@@ -101,17 +125,23 @@ img{
 .modal>.cardfilm>.description>h2{
     margin-bottom: 20px;
 }
-@media screen and (max-width : 1024px){
-    .cardfilm{
+
+@media screen and (max-width : 500px){
+    .btns{
         display:flex;
-        border:2px solid black;
-        width: 100%;
-        /*height:20vw;*/
+        flex-direction:column ;
         justify-content:space-between ;
-        column-gap: 10px;
-        box-shadow: -5px 5px gray;
+        align-items: center;
+        row-gap: 10px;
         cursor: pointer;
-        overflow:hidden;    
+         
+    }
+    h1{
+        color: white;
+        background-color:#a71d14;
+        text-align: center;
+        margin: 50px auto;
+        width: 90%;
     }
 
 }
